# pyrun_backend_project

./: .gitignore  Dockerfile  install.sh  package.json  pyproject.toml  requirements.txt  start.sh
pyrun_backend/: __init__.py  app.py  auto_generated.py  dependencies.py  fastapi_app.py  main.py  main_docker.py  main_localhost.py  router.py  schemas.py
